--- a/machineLearning2/Models.ipynb
+++ b/machineLearning2/Models.ipynb
@@ -119,22 +119,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "9fdfa34a-b609-4f89-9c75-33f7f7e39444",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'RandokmForestClassifier' from 'sklearn.ensemble' (/home/jlazo/git/Intelligent_Systems/venv/lib/python3.8/site-packages/sklearn/ensemble/__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[2], line 4\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmodel_selection\u001b[39;00m \u001b[39mimport\u001b[39;00m train_test_split\n\u001b[1;32m      3\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpreprocessing\u001b[39;00m \u001b[39mimport\u001b[39;00m StandardScaler\n\u001b[0;32m----> 4\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mensemble\u001b[39;00m \u001b[39mimport\u001b[39;00m RandokmForestClassifier\n\u001b[1;32m      6\u001b[0m iris \u001b[39m=\u001b[39m load_iris()\n\u001b[1;32m      8\u001b[0m X_train, X_test, y_train, y_test \u001b[39m=\u001b[39m train_test_split(\n\u001b[1;32m      9\u001b[0m     iris\u001b[39m.\u001b[39mdata, iris\u001b[39m.\u001b[39mtarget, test_size\u001b[39m=\u001b[39m\u001b[39m0.25\u001b[39m, random_state\u001b[39m=\u001b[39m\u001b[39m0\u001b[39m)\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'RandokmForestClassifier' from 'sklearn.ensemble' (/home/jlazo/git/Intelligent_Systems/venv/lib/python3.8/site-packages/sklearn/ensemble/__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.datasets import load_iris\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -171,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "5da1c396-083f-4cc9-b159-5eac8165b227",
    "metadata": {},
    "outputs": [],
@@ -205,7 +193,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.8.10 (default, Nov 14 2022, 12:59:47) \n[GCC 9.4.0]"
   },
   "vscode": {
    "interpreter": {
